--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "nextjs-poc",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -11,5 +11,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [],
+  "description": ""
 }
